--- a/Profiles/app/src/main/res/layout/app_bar_navigation_drawer.xml
+++ b/Profiles/app/src/main/res/layout/app_bar_navigation_drawer.xml
@@ -16,13 +16,46 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:background="?attr/actionBarDivider"
+            app:popupTheme="@style/AppTheme.PopupOverlay">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="SISTEMA DE PERFILES"
+                android:textSize="11sp"
+                android:textStyle="bold"
+                android:textAlignment="textStart"
+                android:textColor="@color/colorPrimaryLightText"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Bienvenido"
+                android:textSize="12sp"
+                android:textStyle="normal"
+                android:layout_marginLeft="50dp"
+                android:textColor="@color/colorPrimaryLightText"
+                />
+            <TextView
+                android:id="@+id/actualUsername"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="actualUsername"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:textAlignment="gravity"
+                android:layout_marginLeft="5dp"
+                android:textColor="@color/colorPrimaryLightText"
+                />
+
+        </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_navigation_drawer" />
 
+    <!--
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
@@ -30,5 +63,6 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:src="@android:drawable/ic_dialog_email" />
+        -->
 
 </android.support.design.widget.CoordinatorLayout>
