--- a/Profiles/app/src/main/res/layout/fragment_personal_profile.xml
+++ b/Profiles/app/src/main/res/layout/fragment_personal_profile.xml
@@ -84,25 +84,17 @@
             android:paddingTop="10dp"
             android:paddingLeft="20dp"
             android:paddingRight="20dp">
-            <EditText
-                android:id="@+id/nation"
-                android:layout_width="match_parent"
+            <Button
+                android:id="@+id/calendarButton"
+                android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:hint="Nacionalidad"
-                android:textSize="15sp"
-                android:textColor="@color/colorPrimaryDark"
-                android:textColorHint="@color/colorPrimaryDark"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:background="@drawable/shape_form"
-                android:paddingLeft="20dp"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1" />
+                android:background="@android:drawable/ic_menu_my_calendar"
+                />
             <EditText
                 android:id="@+id/birthDate"
-                android:layout_width="match_parent"
+                android:layout_width="200dp"
                 android:layout_height="40dp"
-                android:hint="Nacionalidad"
+                android:hint="Fecha de Nacimiento"
                 android:textSize="15sp"
                 android:textColor="@color/colorPrimaryDark"
                 android:textColorHint="@color/colorPrimaryDark"
@@ -111,7 +103,24 @@
                 android:background="@drawable/shape_form"
                 android:paddingLeft="20dp"
                 android:layout_marginLeft="10dp"
-                android:layout_weight="1" />
+                android:layout_marginRight="10dp"
+                android:inputType="none"/>
+            <EditText
+                android:id="@+id/ageProfile"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:hint="Edad"
+                android:textSize="15sp"
+                android:textColor="@color/colorPrimaryDark"
+                android:textColorHint="@color/colorPrimaryDark"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:background="@drawable/shape_form"
+                android:paddingLeft="20dp"
+                android:inputType="none"/>
+
+
         </LinearLayout>
+
     </LinearLayout>
 </FrameLayout>
