--- a/Profiles/app/src/main/res/layout/fragment_contact_profile.xml
+++ b/Profiles/app/src/main/res/layout/fragment_contact_profile.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
     android:layout_gravity="center_horizontal"
-    tools:context="app.texium.com.profiles.fragments.PersonalProfileFragment"
+    tools:context="app.texium.com.profiles.fragments.ContactProfileFragment"
     android:backgroundTint="@color/colorPrimaryLight">
 
     <LinearLayout
@@ -27,7 +27,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Datos Personales"
+                android:text="Contacto"
                 android:textSize="25sp"
                 android:textStyle="bold"
                 android:textColor="@color/colorPrimaryDark"/>
@@ -43,7 +43,7 @@
                 android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:hint="Nombre(s)"
+                android:hint="Email Personal"
                 android:textSize="15sp"
                 android:textColor="@color/colorPrimaryDark"
                 android:textColorHint="@color/colorPrimaryDark"
@@ -55,20 +55,7 @@
                 android:id="@+id/firstSurname"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:hint="Apellido Paterno"
-                android:textSize="15sp"
-                android:textColor="@color/colorPrimaryDark"
-                android:textColorHint="@color/colorPrimaryDark"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:background="@drawable/shape_form"
-                android:paddingLeft="20dp"
-                android:layout_marginTop="10dp"/>
-            <EditText
-                android:id="@+id/secondSurname"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:hint="Apellido Materno"
+                android:hint="Email Profesional"
                 android:textSize="15sp"
                 android:textColor="@color/colorPrimaryDark"
                 android:textColorHint="@color/colorPrimaryDark"
@@ -84,17 +71,25 @@
             android:paddingTop="10dp"
             android:paddingLeft="20dp"
             android:paddingRight="20dp">
-            <Button
-                android:id="@+id/calendarButton"
-                android:layout_width="40dp"
+            <EditText
+                android:id="@+id/electoralSection"
+                android:layout_width="0dp"
                 android:layout_height="40dp"
-                android:background="@android:drawable/ic_menu_my_calendar"
-                />
+                android:hint="Teléfono Móvil"
+                android:textSize="15sp"
+                android:textColor="@color/colorPrimaryDark"
+                android:textColorHint="@color/colorPrimaryDark"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:background="@drawable/shape_form"
+                android:paddingLeft="20dp"
+                android:inputType="none"
+                android:layout_weight="1" />
             <EditText
                 android:id="@+id/birthDate"
-                android:layout_width="180dp"
+                android:layout_width="0dp"
                 android:layout_height="40dp"
-                android:hint="Fecha de Nacimiento"
+                android:hint="Teléfono Oficina"
                 android:textSize="15sp"
                 android:textColor="@color/colorPrimaryDark"
                 android:textColorHint="@color/colorPrimaryDark"
@@ -104,12 +99,20 @@
                 android:paddingLeft="20dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:inputType="none"/>
+                android:inputType="none"
+                android:layout_weight="1" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp">
             <EditText
-                android:id="@+id/ageProfile"
-                android:layout_width="match_parent"
+                android:id="@+id/et1"
+                android:layout_width="0dp"
                 android:layout_height="40dp"
-                android:hint="Edad"
+                android:hint="Teléfono Casa"
                 android:textSize="15sp"
                 android:textColor="@color/colorPrimaryDark"
                 android:textColorHint="@color/colorPrimaryDark"
@@ -117,75 +120,85 @@
                 android:singleLine="true"
                 android:background="@drawable/shape_form"
                 android:paddingLeft="20dp"
-                android:inputType="none"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="20dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Estado Civil"
+                android:inputType="none"
+                android:layout_weight="1" />
+            <EditText
+                android:id="@+id/et2"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:hint="Tel. Referencia"
                 android:textSize="15sp"
                 android:textColor="@color/colorPrimaryDark"
                 android:textColorHint="@color/colorPrimaryDark"
-                android:textStyle="bold"/>
+                android:maxLines="1"
+                android:singleLine="true"
+                android:background="@drawable/shape_form"
+                android:paddingLeft="20dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:inputType="none"
+                android:layout_weight="1" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="20dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp">
-            <CheckBox
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Soltero"
-                android:id="@+id/checkBox"
-                android:layout_weight="1" />
-            <CheckBox
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Casado"
-                android:id="@+id/checkBox2"
-                android:layout_weight="1" />
+            android:orientation="vertical"
+            android:paddingTop="15dp"
+            android:paddingLeft="10dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Fiscal"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                android:textColor="@color/colorPrimaryDark"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingTop="20dp"
+            android:layout_height="wrap_content"
             android:paddingLeft="20dp"
-            android:paddingRight="20dp">
-            <CheckBox
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Viudo"
-                android:id="@+id/checkBox3"
-                android:layout_weight="1" />
-            <CheckBox
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Divorciado"
-                android:id="@+id/checkBo4"
-                android:layout_weight="1" />
+            android:paddingRight="20dp"
+            android:orientation="vertical">
+            <EditText
+                android:id="@+id/electoralAdviser"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:hint="CURP"
+                android:textSize="15sp"
+                android:textColor="@color/colorPrimaryDark"
+                android:textColorHint="@color/colorPrimaryDark"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:background="@drawable/shape_form"
+                android:paddingLeft="20dp"
+                android:layout_marginTop="10dp"/>
+            <EditText
+                android:id="@+id/politicalParty"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:hint="RFC"
+                android:textSize="15sp"
+                android:textColor="@color/colorPrimaryDark"
+                android:textColorHint="@color/colorPrimaryDark"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:background="@drawable/shape_form"
+                android:paddingLeft="20dp"
+                android:layout_marginTop="10dp"/>
         </LinearLayout>
     </LinearLayout>
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
         <Button
+            android:id="@+id/backBtnContactProfile"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:background="@null"
             android:text="@string/back_profile"
             android:textColor="@color/colorPrimaryText"
-            android:id="@+id/button"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:visibility="invisible"/>
+            android:layout_alignParentStart="true"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="40dp"
@@ -195,10 +208,9 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="100dp"
-            android:visibility="invisible"
-            />
+            android:visibility="invisible"/>
         <Button
-            android:id="@+id/nextBtnPersonalProfile"
+            android:id="@+id/nextBtnContactProfile"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:background="@null"
