--- a/Profiles/app/src/main/res/layout/fragment_electoral_profile.xml
+++ b/Profiles/app/src/main/res/layout/fragment_electoral_profile.xml
@@ -148,19 +148,19 @@
                 android:background="@drawable/shape_form"
                 android:paddingLeft="20dp"
                 android:layout_marginTop="10dp"/>
-            <EditText
+            <Spinner
                 android:id="@+id/politicalParty"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:hint="Partido Político"
                 android:textSize="15sp"
                 android:textColor="@color/colorPrimaryDark"
                 android:textColorHint="@color/colorPrimaryDark"
                 android:maxLines="1"
                 android:singleLine="true"
                 android:background="@drawable/shape_form"
-                android:paddingLeft="20dp"
-                android:layout_marginTop="10dp"/>
+                android:paddingLeft="10dp"
+                android:layout_marginTop="10dp"
+                />
             <EditText
                 android:id="@+id/sympathizer"
                 android:layout_width="match_parent"
