--- a/Profiles/app/src/main/res/layout/fragment_address_profile.xml
+++ b/Profiles/app/src/main/res/layout/fragment_address_profile.xml
@@ -39,44 +39,44 @@
             android:paddingTop="20dp"
             android:paddingLeft="20dp"
             android:paddingRight="20dp">
-            <EditText
-                android:id="@+id/name"
+            <Spinner
+                android:id="@+id/state"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:hint="Estado"
                 android:textSize="15sp"
                 android:textColor="@color/colorPrimaryDark"
                 android:textColorHint="@color/colorPrimaryDark"
                 android:maxLines="1"
                 android:singleLine="true"
                 android:background="@drawable/shape_form"
-                android:paddingLeft="20dp" />
-            <EditText
-                android:id="@+id/firstSurname"
+                android:paddingLeft="10dp"
+                />
+            <Spinner
+                android:id="@+id/municipality"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:hint="Municipio"
                 android:textSize="15sp"
                 android:textColor="@color/colorPrimaryDark"
                 android:textColorHint="@color/colorPrimaryDark"
                 android:maxLines="1"
                 android:singleLine="true"
                 android:background="@drawable/shape_form"
-                android:paddingLeft="20dp"
-                android:layout_marginTop="10dp"/>
-            <EditText
-                android:id="@+id/secondSurname"
+                android:paddingLeft="10dp"
+                android:layout_marginTop="10dp"
+                />
+            <Spinner
+                android:id="@+id/city"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:hint="Ciudad"
                 android:textSize="15sp"
                 android:textColor="@color/colorPrimaryDark"
                 android:textColorHint="@color/colorPrimaryDark"
                 android:maxLines="1"
                 android:singleLine="true"
                 android:background="@drawable/shape_form"
-                android:paddingLeft="20dp"
-                android:layout_marginTop="10dp"/>
+                android:paddingLeft="10dp"
+                android:layout_marginTop="10dp"
+                />
             <EditText
                 android:id="@+id/street"
                 android:layout_width="match_parent"
