Spinner web service

--- a/Profiles/app/src/main/res/layout/fragment_address_profile.xml
+++ b/Profiles/app/src/main/res/layout/fragment_address_profile.xml
@@ -65,7 +65,7 @@
                 android:layout_marginTop="10dp"
                 />
             <Spinner
-                android:id="@+id/city"
+                android:id="@+id/location"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:textSize="15sp"
